--- a/css/main.css
+++ b/css/main.css
@@ -12,16 +12,17 @@ header {
 
 a.navbar-brand {
   color: rgba(255, 255, 255, 0.85) !important;
-  font-weight: 500; }
+  font-weight: 510;}
+  /* font-size: 1.2rem !important; } */
   a.navbar-brand:hover, a.navbar-brand:active {
     color: #fff !important; }
 
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.85);
   letter-spacing: 1.5px;
-  font-size: 0.95rem;
+  /* font-size: 1.2rem !important; */
   line-height: 3;
-  font-weight: 500; }
+  font-weight: 510; }
   .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:active {
     color: #fff; }
 
@@ -34,9 +35,11 @@ a.navbar-brand {
 
 @media (max-width: 575.98px) {
   .da-home-page-text .display-3 {
-    font-size: 2.5rem; }
+    font-size: 2.5rem; 
+  }
   .da-home-page-text h3 {
-    font-size: 1rem; } }
+    font-size: 1rem;
+ }}
 
 /*Projects Style*/
 .da-projects .da-project-1 {
