--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -82,7 +82,8 @@ b, strong {
 
 .custom-btn {
   background: #eee;
-  color: #5b5b5b;
+  /* color: #5b5b5b; */
+  color: #84ab8c;
   font-weight: bold;
   border-radius: 50px;
   padding: 13px 29px;
@@ -92,14 +93,17 @@ b, strong {
   transition: all 0.4s ease;
 }
 .custom-btn:hover {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;
 }
 .custom-btn.custom-btn-bg {
-  background: #474559;
+  /* background: #474559; */
+  background: #284444;;
   color: #ffffff;
 }
 .custom-btn.custom-btn-bg:hover {
-  background: #ffc200;
+  /* background: #ffc200; */
+  background: #84ab8c;
   color: #ffffff !important;
 }
 
@@ -116,7 +120,8 @@ b, strong {
 }
 
 .animated-item {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;
 }
 
 .animated-item {
@@ -214,7 +219,8 @@ b, strong {
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;
   font-weight: bold;
 }
 .navbar-light .navbar-nav .nav-link:focus span,
@@ -296,7 +302,9 @@ b, strong {
   color: rgba(255, 255, 255, 0.8);
 }
 .dark-mode .navbar-light .navbar-nav .nav-link:hover {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;
+
 }
 .dark-mode .navbar[class*="headroom--not-top"] {
   background: #0c0c0d;
@@ -398,7 +406,8 @@ b, strong {
   font-size: inherit;
 }
 .owl-theme .owl-nav [class*=owl-]:hover {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;;
 }
 .owl-theme .owl-dots .owl-dot {
   outline: none;
@@ -430,7 +439,8 @@ b, strong {
   height: 48px;
 }
 .contact-form .form-control:hover, .contact-form .form-control:focus {
-  border-color: #ffc200;
+  /* border-color: #ffc200; */
+  border-color: #84ab8c;;
 }
 .contact-form .submit-btn {
   background: #ffc200;
@@ -462,7 +472,8 @@ b, strong {
   margin: 5px 0;
 }
 .social-links .uil:hover {
-  color: #ffc200;
+  /* color: #ffc200; */
+  color: #84ab8c;
 }
 
 @media (min-width: 1270px) {
