--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2598,6 +2598,13 @@ p {
   transition: all 0.3s ease-out 0s;
 }
 
+.icon-custom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+}
+
 .contact-section .contact-item-wrapper .contact-item .contact-content {
   margin-left: 25px;
 }
@@ -2765,7 +2772,7 @@ p {
 }
 
 .footer .copyright-area {
-  border-top: 2px solid rgba(106, 124, 146, 0.44);
+  /* border-bottom: 2px solid rgba(106, 124, 146, 0.44); */
   padding: 25px 0;
   font-size: 16px;
   position: relative;
@@ -2773,7 +2780,7 @@ p {
 }
 
 .footer .copyright-area p {
-  text-align: right;
+  text-align: center;
 }
 
 @media (max-width: 767px) {
@@ -2804,6 +2811,8 @@ p {
 }
 
 .footer-social-links ul {
+  padding-bottom: 25px;
+  border-bottom: 1px solid rgba(106, 124, 146, 0.44);
   justify-content: flex-start;
 }
 
@@ -2818,26 +2827,44 @@ p {
 }
 
 .footer-social-links ul li a {
-
   color: #28AD98;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   background-color: #fff;
-  width: 36px;
-  height: 36px;
+  width: 50px;
+  height: 50px;
   line-height: 36px;
   border-radius: 50%;
   display: inline-block;
-  font-size: 16px;
+  font-size: 22px;
+  padding-top: 8px;
+  margin-right: 20px;
+}
 
-  @media (max-width: 767px) {
-    .footer-social-links ul li a {
-      padding: 0 7px;
-      margin-right: 10px;
-    }
+@media (max-width: 767px) {
+  .footer-social-links ul li a {
+    padding: 0 7px;
+    margin-right: 10px;
   }
 }
 
 .footer-social-links ul li a:hover {
-  background: linear-gradient(#3763eb 0%, #6f58e8 100%);
+  background: linear-gradient(#439875 0%, #395255 100%);
   color: #fff;
+  -webkit-transform: scale(1.15, 1.15);
+  -moz-transform: scale(1.15, 1.15);
+  -o-transform: scale(1.15, 1.15);
+  -ms-transform: scale(1.15, 1.15);
+  transform: scale(1.15, 1.15);
+}
+
+@media (max-width: 766px) {
+  .footer-social-links ul li a:hover {
+    -webkit-transform: scale(1.1, 1.1);
+    -moz-transform: scale(1.1, 1.1);
+    -o-transform: scale(1.1, 1.1);
+    -ms-transform: scale(1.1, 1.1);
+    transform: scale(1.1, 1.1);
+  }
 }
