--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,7 +62,7 @@ a:hover {
   -ms-transition: all 0.3s ease-out 0s;
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
-  color: #3763EB;
+  color: #fff;
 }
 
 a:focus,
@@ -1816,11 +1816,13 @@ p {
 
 #home {
   margin: auto;
+  /* height: 100vh; */
   width: 100%;
-  padding-top: 16vh !important;
-  padding-bottom: 16vh !important;
-  background-image: url('/assets/img/carousel/bg-gradient.png');
+  padding-top: 17vh !important;
+  padding-bottom: 17vh !important;
+  background-image: url('/assets/img/carousel/hero-bg.png');
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* @media (max-width: 428px) {
@@ -2867,4 +2869,14 @@ p {
     -ms-transform: scale(1.1, 1.1);
     transform: scale(1.1, 1.1);
   }
+}
+
+.custom-btn:hover {
+  background: linear-gradient(#439875 0%, #395255 100%);
+  /* color: #fff; */
+  -webkit-transform: scale(1.15, 1.15);
+  -moz-transform: scale(1.15, 1.15);
+  -o-transform: scale(1.15, 1.15);
+  -ms-transform: scale(1.15, 1.15);
+  transform: scale(1.15, 1.15);
 }
