--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -308,9 +308,9 @@ p {
 /*===== All Section Title Style =====*/
 
 @media (max-width: 767px) {
-  .section-title span {
+  /* .section-title span {
     font-size: 20px;
-  }
+  } */
 }
 
 .section-title h2 {
@@ -1815,10 +1815,21 @@ p {
   background-repeat: no-repeat;
 }
 
+@media (min-width: 991px) {
+  #home {
+    margin: 0;
+    height: 100vh;
+    width: 100%;
+    /* padding-top: 17vh !important;
+    padding-bottom: 17vh !important; */
+    background-image: url('/assets/img/hero-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
 #hero{
-  height: 84vh;
-  display: flex;
-  align-items: center;
+  height: 100vh;
 }
 
 /* @media (max-width: 428px) {
@@ -2882,9 +2893,15 @@ p {
 #process h2{
   font-size: 25px;
 }
-
+/* 
 .fs-80 {
   font-size:80px;
+} */
+
+@media (min-width: 991px) {
+  .fs-lg-80 {
+    font-size:80px;
+  }
 }
 
 .fs-40 {
@@ -2895,8 +2912,13 @@ p {
   font-size:32px;
 }
 
-.fs-26 {
-  font-size:24px;
+@media (min-width: 991px) {
+  .fs-lg-26 {
+    font-size:24px;
+  }
+  .fs-lg-20 {
+    font-size:20px;
+  }
 }
 
 .color-darkblue{
@@ -2909,4 +2931,18 @@ p {
 
 .clr-secondary{
   color: #274246;
+}
+
+.lh-2{
+  line-height: 2rem;
+}
+
+@media (min-width: 991px) {
+  .lh-2{
+    line-height: 3rem;
+  }
+}
+
+.text-justify{
+  text-align: justify;
 }
